examples/08-terraform-kubernetes/gcp-gke/infra/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-basic-app
  namespace: default  # Avoid errors with ansible
spec:
  selector:
    matchLabels:
      app: deployment-basic-app
  template:
    metadata:
      labels:
        app: deployment-basic-app
    spec:
      containers:
      - name: deployment-basic-app-container
        image: carlohcs/basic-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000


# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
