examples/08-terraform-kubernetes/gcp-gke/infra/k8s/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basic-app
  namespace: default  # Avoid errors with ansible
spec:
  defaultBackend:
    service:
      name: svc-basic-app
      port:
        number: 3000
